Added shgysk8zer0/cursors submodule
Just add the submodule. It is currently not implemented, though some
cursors are used in CSS.

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "stylesheets/normalize"]
 	path = stylesheets/normalize
 	url = git://github.com/necolas/normalize.css.git
+[submodule "images/cursors"]
+	path = images/cursors
+	url = git://github.com/shgysk8zer0/cursors.git
